# nmpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.asciidoc  README.md  cmake-variables.cmake  nmc-gcc-compile.cmake  nmpp2env.bat
deploy/: CMakeLists.txt  Packing.cmake
examples/: CMakeLists.txt  Makefile
examples/float/fft/nmppsFFT1024Fwd/: main.cpp
examples/float/fft/nmppsFFT1024Fwd_static/: main.cpp
examples/float/fft/nmppsFFT1024Inv/: main.cpp
examples/float/fft/nmppsFFT128Fwd/: main.cpp
examples/float/fft/nmppsFFT128FwdInv_static/: main.cpp
examples/float/fft/nmppsFFT128Inv/: Makefile  main.cpp
examples/float/fft/nmppsFFT2048Fwd/: main.cpp
examples/float/fft/nmppsFFT2048Inv/: main.cpp
examples/float/fft/nmppsFFT256Fwd/: main.cpp
examples/float/fft/nmppsFFT256Inv/: main.cpp
examples/float/fft/nmppsFFT4096Fwd/: main.cpp
examples/float/fft/nmppsFFT4096Inv/: main.cpp
examples/float/fft/nmppsFFT512Fwd/: main.cpp
examples/float/fft/nmppsFFT512Inv/: main.cpp
examples/float/nmblas/nmblas_dasum/: main.cpp
examples/float/nmblas/nmblas_daxpy/: main.cpp
examples/float/nmblas/nmblas_dcopy/: main.cpp
examples/float/nmblas/nmblas_ddot/: main.cpp
examples/float/nmblas/nmblas_dnrm2/: main.cpp
examples/float/nmblas/nmblas_drot/: main.cpp
examples/float/nmblas/nmblas_drotm/: main.cpp
examples/float/nmblas/nmblas_dscal/: main.cpp
examples/float/nmblas/nmblas_dsdot/: main.cpp
examples/risc/nmppsConvertRisc_32u8u/: main.cpp
examples/risc/nmppsConvertRisc_8u32u/: main.cpp
examples/templates/: CMakeLists.txt  CMakeLists.txt.in  Makefile.in  build.bat.in  build.sh.in  configure_vs17.bat  configure_vs19.bat  mb7707.lds  mc11102.lds  mc12101-nmpu0.lds  mc12101-nmpu1.lds  mc5103.lds  qemu-nm6407f.lds  qemu-nm6407i.lds  qemu-nm6408.lds  run.bat.in  run.sh.in
examples/templates/x64-cl/: Makefile  Makefile.in
examples/templates/x64-gcc/: Makefile  Makefile.in
test/: CMakeLists.txt  Makefile
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_16s16s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_16s32s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_16s64s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_2s16s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_2s32s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_2s64s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_2s8s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_32s32s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_32s64s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_4s64s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_64s64s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_8s16s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_8s32s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_8s64s/: main.cpp
test/fixed/matrix/nmppmMul_mm/nmppmMul_mm_8s8s/: main.cpp
test/fixed/matrix/nmppmMul_mv/nmppmMul_mv_16s64s/: main.cpp
test/fixed/matrix/nmppmMul_mv/nmppmMul_mv_32s64s/: main.cpp
test/fixed/matrix/nmppmMul_mv/nmppmMul_mv_8s64s/: main.cpp
test/fixed/signal/Arithmetics/nmppsRShiftC_MulC_AddC_2x32s/: main.cpp
test/fixed/signal/Bitwise/nmppsAnd_64u/: main.cpp
test/fixed/signal/Bitwise/nmppsMask_64u/: main.cpp
test/fixed/signal/Bitwise/nmppsNot_64u/: main.cpp
test/fixed/signal/Bitwise/nmppsOr4V_64u/: main.cpp
test/fixed/signal/Bitwise/nmppsOr_64u/: main.cpp
test/fixed/signal/Filtration/nmppsFIR_16s/: main.cpp
test/fixed/signal/Filtration/nmppsFIR_16s32s/: main.cpp
test/fixed/signal/Filtration/nmppsFIR_32s/: main.cpp
test/fixed/signal/Filtration/nmppsFIR_8s/: main.cpp
test/fixed/signal/Filtration/nmppsFIR_8s16s/: main.cpp
test/fixed/signal/Filtration/nmppsFIR_8s32s/: main.cpp
test/fixed/signal/Select/nmppsFirstNonZeroIndx_16s/: main.cpp
test/fixed/signal/fft/nmppsFFT2048Inv/: main.cpp
test/fixed/signal/fft/nmppsFFT8192Fwd/: main.cpp
test/float/: Makefile  local.json
test/float/arithmetic/nmppsAddC_32fcr/: main.cpp
test/float/arithmetic/nmppsAdd_32f/: main.cpp
test/float/arithmetic/nmppsConjMul_32fcr/: main.cpp
test/float/arithmetic/nmppsMulC_32f/: main.cpp
test/float/arithmetic/nmppsMulC_Add_32fcr/: main._cpp
test/float/arithmetic/nmppsMul_32f/: main.cpp
test/float/arithmetic/nmppsMul_32fcr/: main.cpp
test/float/arithmetic/nmppsMul_ConjMul_Add_32fcr/: main.cpp
test/float/arithmetic/nmppsMul_Mul_Add_32fcr/: main.cpp
test/float/arithmetic/nmppsMul_Mul_Add_64f/: main.cpp
test/float/arithmetic/nmppsMul_Mul_Sub_32f/: main.cpp
test/float/arithmetic/nmppsSqrt_32f/: main.cpp
test/float/arithmetic/nmppsSub_32f/: main.cpp
test/float/conditional/nmppsCmpGtC_vnm32f/: main.cpp
test/float/conditional/nmppsCmpGteC_vnm32f/: main.cpp
test/float/conditional/nmppsCmpLtC_vnm32f/: main.cpp
test/float/conditional/nmppsCmpLteC_vnm32f/: main.cpp
test/float/matrix/nmppmMul_mm_32f/: main.cpp
test/float/nmblas/level1/nmblas_dasum/: main.cpp
test/float/nmblas/level1/nmblas_daxpy/: main.cpp
test/float/nmblas/level1/nmblas_dcopy/: main.cpp
test/float/nmblas/level1/nmblas_ddot/: main.cpp
test/float/nmblas/level1/nmblas_dnrm2/: main.cpp
test/float/nmblas/level1/nmblas_drot/: main.cpp
test/float/nmblas/level1/nmblas_dscal/: main.cpp
test/float/nmblas/level1/nmblas_dsdot/: main.cpp
test/float/nmblas/level1/nmblas_dswap/: main.cpp
test/float/nmblas/level1/nmblas_idamax/: main.cpp
test/float/nmblas/level1/nmblas_isamax/: main.cpp
test/float/nmblas/level1/nmblas_sasum/: main.cpp
test/float/nmblas/level1/nmblas_saxpy/: main.cpp
test/float/nmblas/level1/nmblas_scopy/: main.cpp
test/float/nmblas/level1/nmblas_sdot/: main.cpp
test/float/nmblas/level1/nmblas_sdsdot/: main.cpp
test/float/nmblas/level1/nmblas_snrm2/: main.cpp
test/float/nmblas/level1/nmblas_srot/: main.cpp
test/float/nmblas/level1/nmblas_srotm/: main.cpp
test/lds/: mc11101.lds  mc12101-nmpu1.lds  nm_card.lds
test/risc/Init/nmppsConvertRisc_32u8u/: main.cpp
test/risc/Init/nmppsConvertRisc_8u32u/: main.cpp
test/risc/arithmetic/nmppcSqrt_64u/: main.cpp
(+1364 files in other folders)
